syntax = "proto3";

package chat;

option go_package = "github.com/charmingruby/clowork/api/proto/pb";

service ChatStream {
    rpc Stream(ClientEvent) returns (ServerEvent);
};

service ChatAPI {
    rpc CreateRoom(CreateRoomRequest) returns (CreateRoomReply);
    rpc ListRooms(ListRoomsRequest) returns (ListRoomsReply);
    rpc GetRoomHistory(GetRoomHistoryRequest) returns (GetRoomHistoryReply);
    rpc GetRoomMembers(GetRoomMembersRequest) returns (GetRoomMembersReply);
};

message ClientEvent {};

message ServerEvent {};

message ListRoomsRequest {};

message ListRoomsReply {};

message GetRoomHistoryRequest {};

message GetRoomHistoryReply {};

message GetRoomMembersRequest {};

message GetRoomMembersReply {};

message CreateRoomRequest {
    string name = 1;
    string topic = 2; 
};

message CreateRoomReply {
    string room_id = 1;
};